# plugin_tools

./: "config.h".in  .autotools  .cproject  .gitignore  .gitignore.swp  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  common.c  config.status  configure  configure.ac  libtool  logger.h  tags
.libs/: lt-main
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
include/: Makefile  Makefile.am  Makefile.in  base64.h  buffer.h  capi-dbus-service.h  capi-sys-service.h  capi.h  capisys.h  ctsgw.h  debug.h  fifobuffer.h  libClient.h  logger.h  md5.h  netutils.h  sysutils.h
include/gio/: gdbusconnection.h  giotypes.h
libClient/: :  Makefile  Makefile.am  Makefile.in  base64.c  buffer.c  capi-dbus-service.c  capi-handset-api.c  capi-sys-service.c  capisys.c  fifobuffer.c  libClient.c  libClient.la  libClient_la-libClient.lo  libClient_la-logger.lo  logger.c  md5.c  netutils.c  sysutils.c
libClient/.deps/: libClient_la-libClient.Plo  libClient_la-logger.Plo
libClient/.libs/: libClient.la  libClient.lai  libClient.so.0  libClient.so.0.0.0
libClient/capi/: capi-app-mgr.c  capi-app-mgr.h  capi-dbus-service.c  capi-dbus-service.h  capi-handset-api.c  capi-sys-service.c  capi-sys-service.h  capi-variable-type.c  capi-variable-type.h  capi.h  test.c
main/: .main.c.swp  Makefile  Makefile.am  Makefile.in  demoapp2.c  log4crc  main  main.c  test.c  test.json
main/.deps/: main-main.Po
main/.libs/: lt-main  main
