#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib
lib_LTLIBRARIES = libClient.la

#######################################
# Build information for each library

# Sources for libClient
libClient_la_SOURCES = libClient.c

# Linker options libTestProgram
libClient_la_LDFLAGS = 

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libClient_la_CPPFLAGS = -I$(top_srcdir)/include

